--- a/article/有趣的闭包.md
+++ b/article/有趣的闭包.md
@@ -97,7 +97,7 @@ x();
 
 ## 这，就是闭包
 
-`insideFn` 函数可以访问 `outsideFn` 函数里面的变量，其实这里面是作用域链在起作用，简单来说，就是 `insideFn` 函数的作用域链里面，保存了`insideFn` 函数的作用域链：
+`insideFn` 函数可以访问 `outsideFn` 函数里面的变量，其实这里面是作用域链在起作用，简单来说，就是 `insideFn` 函数的作用域链里面，保存了`outsideFn` 函数的作用域链：
 
 ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/15c8c9e8ea61412ba939f66831c5426f~tplv-k3u1fbpfcp-jj-mark:0:0:0:0:q75.image#?w=485\&h=173\&s=7742\&e=png\&b=fefefe)
 
@@ -169,13 +169,13 @@ a= 20 b= 10
 第1次调用 `outsideFn` 函数：
 
 1.  初始化变量 `b` ，并将其设置为 10 （我们把 `这个 b` 暂时叫做 `b1`）
-2.  返回 `insideFn` 函数，并将其保留在 变量 `x` 里面，这个时候 `x` 会保存`insideFn` 函数的作用域。
+2.  返回 `insideFn` 函数，并将其保留在 变量 `x` 里面，这个时候 `x` 会保存`outsideFn` 函数的作用域。
 3.  `outsideFn` 函数执行完毕，其所有变量都不再存在。
 
 第2次执行 `outsideFn` 函数：
 
 1.  初始化变量 `b` ，并将其设置为 10 （我们把 `这个b` 暂时叫做 `b2`）
-2.  返回 `insideFn` 函数，并将其保留在 变量 `y` 里面，这个时候 `y` 会保存`insideFn` 函数的作用域。
+2.  返回 `insideFn` 函数，并将其保留在 变量 `y` 里面，这个时候 `y` 会保存`outsideFn` 函数的作用域。
 3.  `outsideFn` 函数执行完毕，其所有变量都不再存在。
 
 接下来开始执行：
@@ -224,7 +224,7 @@ a= 20 b= 11
 a= 20 b= 12
 ```
 
-> 这里变量 `b` 就是取自作用域链，而我们第1次执行的时候，将变量 `b` 加1了，所以这里打印 `b=12`。
+> 这里变量 `b` 就是取自作用域链，而我们第2次执行的时候，将变量 `b` 加1了，所以这里打印 `b=12`。
 
 3.  变量 `a` 和 `b`增加1
 4.  `x` 函数执行完毕，其所有变量都不再存在。
@@ -243,7 +243,7 @@ a= 20 b= 10
 3.  变量 `a` 和 `b`增加1
 4.  `y` 函数执行完毕，其所有变量都不再存在。
 
-> `x` 函数执行完毕，其所有变量都不再存在。那么变量 `a` 就不存在了，但是变量 `b` 却仍然存在，因为 `x` 函数 还保留着 `outsideFn` 函数的作用域链。
+> `y` 函数执行完毕，其所有变量都不再存在。那么变量 `a` 就不存在了，但是变量 `b` 却仍然存在，因为 `y` 函数 还保留着 `outsideFn` 函数的作用域链。
 
 这个时候 变量 `b` 变成10了，也就是说，`b1` 和 `b2` 不是同一个变量，这也印证了，`x` 和 `y` 不是同一个函数。
 
